--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -1,27 +1,259 @@
+@import "_root/index";
+//@import "_gutemberg/index";
+@import "vendor/splidejs/splide.min.css"; // 5.0.1
+@import "_templates/index";
+@import "_components/index";
+@import "_gutemberg/index";
+@import "_theme/index";
+// @import "wait";
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-// abstracts
-@import "abstracts/variables";
+body {
+  font-family: var(--font);
+  background: var(--color-white);
+  color: var(--color-dark);
+  overflow-x: hidden;
+}
 
-// vendors
-@import "node_modules/bootstrap/scss/bootstrap";
+main {
+  overflow-x: hidden;
+  min-height: 940px;
+}
 
-// vendors overrides
-// @import "vendors/myvendor";
+h1,
+h2,
+h3,
+h4,
+h5,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.btn {
+  font-family: var(--fontheading);
+  line-height: 1.2;
+}
 
-// base
-@import "base/fonts",
-        "base/base";
+.btn {
+  cursor: pointer;
+}
 
-// layout
-@import "layout/header",
-        "layout/footer",
-        "layout/forms",
-        "layout/grid";
+.w-md {
+  max-width: 1280px;
+}
+.w-sm {
+  max-width: 1080px;
+}
+.w-xs {
+  max-width: 550px;
+}
 
-// components
-@import "components/buttons",
-        "components/modal";
+.w-xxs {
+  max-width: 400px;
+}
 
-// pages
-@import "pages/front-page",
-        "pages/page";
+.bold {
+  font-weight: 700;
+}
+
+.xlbold {
+  font-weight: 900;
+}
+
+.smbold {
+  font-weight: 400;
+}
+
+.container-xl {
+  padding-right: 2rem;
+  padding-left: 2rem;
+  max-width: 1480px;
+  margin: auto;
+  @include media-breakpoint-down(md) {
+    padding-right: 1.2rem;
+    padding-left: 1.2rem;
+  }
+}
+
+.reverse {
+  transform: rotate(180deg);
+}
+
+.text-end {
+  text-align: end;
+}
+
+.cover {
+  object-fit: cover;
+}
+
+.btn {
+  font-size: 1.25rem;
+  padding-bottom: 0.65rem;
+}
+
+.btn-dark:hover {
+  border-color: var(--color-dark);
+}
+
+.gutter-lg {
+  @include media-breakpoint-up(md) {
+    --space-x: 6rem;
+  }
+}
+
+a:not(.btn) {
+  transition: color 0.3s, background-color 0.3s;
+}
+
+a.link-nav {
+  color: var(--color-dark);
+  &:hover {
+    color: var(--color-primary);
+  }
+}
+.btn-link {
+  color: var(--color-dark);
+  font-size: 1.25rem;
+  padding: 0.5rem;
+  border-radius: 2px;
+
+  &:hover {
+    color: var(--color-primary);
+  }
+  &:focus {
+    box-shadow: 0 0 0 2px var(--color-primary);
+  }
+}
+
+.h-100 {
+  height: 100%;
+}
+
+em {
+  font-style: italic;
+}
+.py-05 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.pr-0 {
+  padding-right: 0;
+}
+.p-0 {
+  padding: 0;
+}
+main {
+  overflow: hidden;
+}
+
+.no-weight {
+  font-weight: none;
+}
+
+.headband {
+  transform: rotate(-3deg);
+  left: -10px;
+  position: relative;
+  width: 105%;
+  background-color: var(--color-dark);
+  padding: 1rem 0;
+}
+
+.has-bg-secondary-left {
+  color: var(--color-white);
+  background-color: var(--color-pink);
+  display: inline-flex;
+  padding: 0.5rem 3rem;
+  font-size: 2.5rem;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  margin: 0;
+}
+
+.lead {
+  font-weight: 600;
+  font-size: var(--font-size-lg);
+}
+
+.rounded {
+  border-radius: var(--radius);
+}
+
+form {
+  label:not(.form-check-label) {
+    font-family: var(--fontheading);
+    font-size: var(--font-size-xl);
+  }
+  .form-group {
+    margin-bottom: 1rem;
+  }
+}
+
+.p-relative {
+  position: relative;
+}
+
+.no-scroll {
+  overflow: hidden;
+  height: 100vh;
+}
+
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.fontnormal {
+  --fontheading: var(--font);
+}
+.fontlato {
+  font-family: "Lato", serif;
+}
+.fontroboto {
+  font-family: "Roboto", serif;
+}
+[data-anim],
+[data-splittext] {
+  opacity: 0;
+  &.show {
+    opacity: 1;
+  }
+}
+
+.nomotion {
+  [data-anim],
+  [data-splittext] {
+    opacity: 1;
+  }
+}
+
+.rotate {
+  //transform: rotate(-1.4deg);
+  //padding-bottom: 2rem;
+}
+
+.page-cms {
+  .inline-flex.mr-1 {
+    margin-bottom: 1rem;
+  }
+}
+
+.nav-topics {
+  --bd-size: 30px;
+  padding: 1.5rem;
+  margin-left: initial;
+  width: fit-content;
+  ul {
+    flex-wrap: wrap;
+    a:hover {
+      color: var(--color-dark);
+    }
+  }
+}
