--- a/assets/src/scss/_templates/password.scss
+++ b/assets/src/scss/_templates/password.scss
@@ -21,7 +21,6 @@
   }
   &-shape-text {
     color: white;
-    background-color: var(--color-blue);
     border-radius: 35%;
     padding: 1rem 2rem;
     @include media-breakpoint-up(md) {
@@ -33,5 +32,10 @@
       padding: inherit;
       border-radius: inherit;
     }
+  }
+  .error-message {
+    color: red;
+    text-align: center;
+    font-weight: bold;
   }
 }
