--- a/assets/src/scss/_variables.scss
+++ b/assets/src/scss/_variables.scss
@@ -12,7 +12,7 @@ $colors: (
   "grey": #f1f1f1f1,
   "gray": #b5b5b5,
   "gren": #a9c80f,
-  //grey-100: rgb(216, 216, 216)
+  "gray-dark": #757575 //grey-100: rgb(216, 216, 216),,
 );
 
 $sizes: (
