--- a/assets/src/scss/_templates/header.scss
+++ b/assets/src/scss/_templates/header.scss
@@ -1,5 +1,5 @@
 header {
-  background-color: #ffffff80;
+  background-color: #bfbfbf;
   width: 100%;
   z-index: 100;
   .menu-header {
@@ -44,6 +44,9 @@ header {
           margin-top: 5rem;
           margin-left: 1rem;
           gap: 1rem;
+          .bg-white {
+            max-width: 200px;
+          }
           a {
             max-width: 200px;
           }
@@ -74,7 +77,45 @@ header {
             }
             li {
               a {
+                position: relative;
                 color: #000;
+                font-size: var(--font-size-base);
+                &:before {
+                  content: "";
+                  position: absolute;
+                  transition: transform 0.5s ease;
+                }
+                &:after {
+                  content: "";
+                  position: absolute;
+                  transition: transform 0.5s ease;
+                }
+                > span {
+                  &:before {
+                    content: "";
+                    position: absolute;
+                    transition: transform 0.5s ease;
+                  }
+                  &:after {
+                    content: "";
+                    position: absolute;
+                    transition: transform 0.5s ease;
+                  }
+                }
+                padding-top: 10px;
+                &:before {
+                  left: 0;
+                  bottom: -5px;
+                  width: 100%;
+                  height: 2px;
+                  background: var(--color-blue);
+                  transform: scaleX(0);
+                }
+                &:hover {
+                  &:before {
+                    transform: scaleX(1);
+                  }
+                }
                 @include media-breakpoint-down(md) {
                   color: white;
                 }
@@ -126,6 +167,18 @@ header {
           font-size: 16px !important;
           justify-content: center;
         }
+      }
+    }
+    .logout {
+      transition: 0.3s ease-in-out;
+      &:hover {
+        margin-left: 1rem;
+      }
+    }
+    .myaccount {
+      transition: 0.3s ease-in-out;
+      &:hover {
+        margin-left: 1rem;
       }
     }
   }
