--- a/assets/src/scss/_templates/index.scss
+++ b/assets/src/scss/_templates/index.scss
@@ -4,4 +4,5 @@
 @import "connexion.scss";
 @import "password.scss";
 @import "dashboard.scss";
-@import "create-project";
+@import "new-project";
+@import "archive-professionnel";
