--- a/assets/src/scss/_variables.scss
+++ b/assets/src/scss/_variables.scss
@@ -7,12 +7,12 @@ $colors: (
   "dark": #000000,
   "gold": #e5b704,
   "premium": #b21917,
-  "standard": #fc8f02,
+  "professionnel": #fc8f02,
   "white": #ffffff,
   "grey": #f1f1f1f1,
   "gray": #b5b5b5,
   "gren": #a9c80f,
-  "gray-dark": #757575 //grey-100: rgb(216, 216, 216),,
+  "gray-dark": #757575 //grey-100: rgb(216, 216, 216),,,,
 );
 
 $sizes: (
