--- a/assets/src/scss/_templates/connexion.scss
+++ b/assets/src/scss/_templates/connexion.scss
@@ -64,7 +64,7 @@
 .pro-inscription {
   position: relative;
   overflow: hidden;
-  background-color: var(--color-standard);
+  background-color: var(--color-professionnel);
 }
 .particulier-inscription {
   position: relative;
@@ -97,16 +97,16 @@
     &:hover,
     &:focus,
     &:active:focus {
-      color: var(--color-standard);
-      border-bottom: 1px solid var(--color-standard);
+      color: var(--color-professionnel);
+      border-bottom: 1px solid var(--color-professionnel);
       &::placeholder {
-        color: var(--color-standard);
+        color: var(--color-professionnel);
       }
     }
   }
   button {
     width: max-content;
-    background-color: var(--color-standard);
+    background-color: var(--color-professionnel);
   }
 }
 
@@ -126,7 +126,7 @@ form {
   input {
     display: block;
     height: 70px;
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
     border: none;
     &::placeholder {
