--- a/assets/src/scss/_templates/dashboard.scss
+++ b/assets/src/scss/_templates/dashboard.scss
@@ -1,6 +1,29 @@
 .dashboard-page {
+  .avatar-container {
+    .avatar {
+      border-radius: 50%;
+      overflow: hidden;
+      width: 150px;
+      height: 150px;
+      img {
+        object-fit: cover;
+        height: 150px;
+      }
+    }
+    @include media-breakpoint-down(md) {
+      display: flex;
+      justify-content: center;
+    }
+  }
   .profil {
     border-right: 2px solid #dedede;
+    @include media-breakpoint-down(md) {
+      margin-bottom: 3rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
     .logout {
       a {
         justify-content: start;
@@ -22,11 +45,35 @@
     height: 200px;
     resize: none;
   }
-  .avatar {
-    border-radius: 50%;
-    overflow: hidden;
-    max-width: 150px;
-    border: 5px solid #515dae;
+  .custom-input {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+  }
+  .mes-projets {
+    .container-title {
+      display: grid;
+      grid-template-columns: 30% 20% 20% 20% 10%;
+      margin-bottom: 2rem;
+      @include media-breakpoint-down(md) {
+        grid-template-columns: 1fr; // Une seule colonne pour mobile
+        row-gap: 1rem; // Ajouter un espace entre les rangées
+      }
+    }
+    .container-list {
+      border-top: 1px solid var(--color-blue);
+      border-bottom: 1px solid var(--color-blue);
+      padding: 1rem 0;
+      display: grid;
+      grid-template-columns: 30% 20% 20% 20% 10%;
+      @include media-breakpoint-down(md) {
+        grid-template-columns: 1fr; // Une seule colonne pour mobile
+        row-gap: 1rem; // Ajouter un espace entre les rangées
+      }
+    }
+  }
+}
+#pro-info-form {
+  input[type="checkbox"] {
+    border: 1px solid #000;
   }
 }
 
