--- a/assets/src/scss/_variables.scss
+++ b/assets/src/scss/_variables.scss
@@ -2,17 +2,18 @@ $colors: (
   primary: #e63a54,
   secondary: #0e993c,
   "blue": #3968a8,
+  "particulier": #3968a8,
   "blue-light": #01a0be,
   "blue-dark": #383b45,
   "dark": #000000,
-  "gold": #e5b704,
-  "premium": #b21917,
+  "pro-gold": #e5b704,
+  "pro-premium": #b21917,
   "professionnel": #fc8f02,
   "white": #ffffff,
   "grey": #f1f1f1f1,
   "gray": #b5b5b5,
   "gren": #a9c80f,
-  "gray-dark": #757575 //grey-100: rgb(216, 216, 216),,,,
+  "gray-dark": #757575 //grey-100: rgb(216, 216, 216),,,,,,
 );
 
 $sizes: (
