--- a/assets/src/scss/_components/_card.scss
+++ b/assets/src/scss/_components/_card.scss
@@ -3,11 +3,17 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #f1f1f1;
+  border: 1px solid #eee;
   padding: 1rem;
-  background-color: white;
+  background-color: #fff;
   position: relative;
   overflow: hidden;
+  box-shadow: 0 0 0px rgba(33, 33, 33, 0.2);
+  border-radius: 5px;
+  transition: 0.3s ease-in-out;
+  &:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
+  }
   .avatar {
     display: flex;
     justify-content: center;
@@ -18,7 +24,13 @@
       margin-bottom: 1rem;
     }
     .border-professionnel {
-      border: 2px solid var(--color-professionnel);
+      border: 3px solid var(--color-professionnel);
+    }
+    .border-pro-premium {
+      border: 3px solid var(--color-pro-premium);
+    }
+    .border-pro-gold {
+      border: 3px solid var(--color-pro-gold);
     }
   }
   .name {
@@ -26,29 +38,16 @@
     font-weight: 700;
     font-style: normal;
   }
-  .view-hover {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 90% 10%;
-    justify-content: end;
-    align-items: center;
+  .city {
     transition: 0.3s ease-in-out;
-    transform: translateY(100px);
-    p {
-      margin-top: 1rem;
-      font-weight: 500;
-      text-align: center;
-    }
   }
   .bg-professionnel {
     background-color: var(--color-professionnel);
   }
-  &:hover {
-    .view-hover {
-      transform: translateY(0px);
-    }
+  .bg-pro-premium {
+    background-color: var(--color-pro-premium);
+  }
+  .bg-pro-gold {
+    background-color: var(--color-pro-gold);
   }
 }
