--- a/assets/src/scss/_components/_modal.scss
+++ b/assets/src/scss/_components/_modal.scss
@@ -1,127 +1,125 @@
-
 .modal {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    right: 0;
-    z-index: 30;
-    visibility: hidden;
-	transition: background-color 0.3s, visibility 0s 0.4s;
-    z-index: 999;
-    overflow-x: hidden;
-    overflow-y: auto;
-	.title{
-		@extend h3
-	}
-	&.is-open{
-		background-color: rgba(0, 0, 0, 0.7);
-		visibility: visible;
-		
-		transition: background-color 0.3s;
-		.modal-inner{
-			transform: translateY(5%);	
-			opacity: 1;		
-		}
-	}
-	&-inner{
-		background-color: var(--color-secondary);
-		border-radius: var(--radius);
-		width: 100%;
-		max-width: 460px;
-		padding:3rem;
-        position: relative;
-        margin: 2rem auto;
-		transition: transform .3s cubic-bezier(.215,.61,.355,1),  opacity .3s cubic-bezier(.215,.61,.355,1);
-		box-shadow: 6px 0px 15px -6px rgba(0,0,0,0.38);
-		transform: translateY(-30%);
-		opacity: 0;	
-		color:#FFF;
-		@include media-breakpoint-down(lg) {
-			width: 95%;
-			padding:2rem 1.5rem;
-		}
-		svg{
-			fill:#FFF
-		}
-		.size-s{
-			margin: 10px 0 0;
-			opacity: 0.7;
-		}
-		.is-white &{
-			background: #FFF;
-			color:var(--color-base);
-			max-width: 600px;
-			svg{
-				fill: var(--color-base);
-			}
-		
-		}
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 30;
+  visibility: hidden;
+  transition: background-color 0.3s, visibility 0s 0.4s;
+  z-index: 999;
+  overflow-x: hidden;
+  overflow-y: auto;
+  .title {
+    @extend h3;
+  }
+  &.is-open {
+    background-color: rgba(0, 0, 0, 0.7);
+    visibility: visible;
 
-	}
-	&-content{
-	    height: 100%;
-		padding: 0em;
-		@include media-breakpoint-down(md) {
-			padding: 1em 1em;
-		}
-		a:not(.btn){
-		 color: #FFF;
-		 text-decoration: underline;
-		}
-	}
-	
-	&.modal-lg{
-		.modal-inner{
-			max-width: fit-content;
-			background-color: var(--color-dark);
-			padding: 1rem;
-		}
-		.modal-img img{
-			max-height: 80vh;
-			max-width: 80vw;
-		}
-	}
-	&-close{
-		position: absolute;
-		top: 12px;
-		right: 12px;
-		z-index: 99;
-		color: #FFF;
-		background: none;
-		border: none;
-		cursor: pointer;
-		svg {
-			width: 15px;
-    		height: 15px;
-		}
-		@include media-breakpoint-down(md) {
-			svg {
-				width: 16px;
-				height: 16px;
-			}
-		}
-	}
-	
-	
+    transition: background-color 0.3s;
+    .modal-inner {
+      transform: translateY(5%);
+      opacity: 1;
+    }
+  }
+  &-inner {
+    background-color: var(--color-secondary);
+    border-radius: var(--radius);
+    width: 100%;
+    max-width: 460px;
+    padding: 3rem;
+    position: relative;
+    margin: 2rem auto;
+    transition: transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1),
+      opacity 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+    box-shadow: 6px 0px 15px -6px rgba(0, 0, 0, 0.38);
+    transform: translateY(-30%);
+    opacity: 0;
+    color: #fff;
+    @include media-breakpoint-down(lg) {
+      width: 95%;
+      padding: 2rem 1.5rem;
+    }
+    svg {
+      fill: #fff;
+    }
+    .size-s {
+      margin: 10px 0 0;
+      opacity: 0.7;
+    }
+    .is-white & {
+      background: #fff;
+      color: var(--color-base);
+      max-width: 600px;
+      svg {
+        fill: var(--color-base);
+      }
+    }
+  }
+  &-content {
+    height: 100%;
+    padding: 0em;
+    @include media-breakpoint-down(md) {
+      padding: 1em 1em;
+    }
+    a:not(.btn) {
+      color: #fff;
+      text-decoration: underline;
+    }
+  }
+
+  &.modal-lg {
+    .modal-inner {
+      max-width: fit-content;
+      background-color: var(--color-dark);
+      padding: 1rem;
+    }
+    .modal-img img {
+      max-height: 80vh;
+      max-width: 80vw;
+    }
+  }
+  &-close {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    z-index: 99;
+    color: #fff;
+    background: none;
+    border: none;
+    cursor: pointer;
+    svg {
+      width: 15px;
+      height: 15px;
+    }
+    @include media-breakpoint-down(md) {
+      svg {
+        width: 16px;
+        height: 16px;
+      }
+    }
+  }
 }
 
-
 .glightbox-clean .gslide-description {
-    background: none;
+  background: none;
 }
 
 .glightbox-clean .gdesc-inner {
-    padding: 0;
-    font-size: 12px;
-    
-	h4{
-		text-transform: none;
-		color: #FFF;
-		width: fit-content;
-		background: rgb(0 0 0 / 50%);
-		padding: 5px 10px;
-		margin-top: -26px;
-	}
+  padding: 0;
+  font-size: 12px;
+
+  h4 {
+    text-transform: none;
+    color: #fff;
+    width: fit-content;
+    background: rgb(0 0 0 / 50%);
+    padding: 5px 10px;
+    margin-top: -26px;
+  }
 }
 
+.custom-modal-height {
+  height: 90vh;
+}
