--- a/assets/src/scss/_root/_forms.scss
+++ b/assets/src/scss/_root/_forms.scss
@@ -33,8 +33,8 @@ input[type="radio"] {
   padding: initial;
   line-height: initial;
   &:checked {
-    background-color: var(--color-primary);
-    border-color: var(--color-primary);
+    background-color: var(--color-blue);
+    border-color: var(--color-blue);
   }
 }
 input[type="radio"] {
