--- a/assets/src/scss/_templates/index.scss
+++ b/assets/src/scss/_templates/index.scss
@@ -5,4 +5,6 @@
 @import "password.scss";
 @import "dashboard.scss";
 @import "new-project";
-@import "archive-professionnel";
+@import "archive_professionnel";
+@import "single_professionnel";
+@import "edit-page-pro";
