--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -41,6 +41,27 @@ h5,
   cursor: pointer;
 }
 
+.border-particulier {
+  border: 4px solid var(--color-blue);
+}
+.border-professionnel {
+  border: 4px solid var(--color-professionnel);
+}
+.border-pro-premium {
+  border: 4px solid var(--color-pro-premium);
+}
+.border-pro-gold {
+  border: 4px solid var(--color-pro-gold);
+}
+.border-bottom {
+  padding-bottom: 1rem;
+  border-bottom: 1px solid #e6e7ec;
+}
+.border-right {
+  padding-right: 1rem;
+  border-right: 1px solid #e6e7ec;
+}
+
 .w-md {
   max-width: 1280px;
 }
