--- a/assets/src/scss/_templates/header.scss
+++ b/assets/src/scss/_templates/header.scss
@@ -3,17 +3,6 @@ header {
   height: auto;
   width: 100%;
   z-index: 100;
-  &::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100%;
-    background-color: #bfbfbf;
-    z-index: -1;
-    opacity: 0.4;
-  }
   .menu-header {
     display: grid;
     grid-template-columns: 30% 40% 30%;
@@ -32,173 +21,47 @@ header {
         align-items: inherit;
         margin-bottom: inherit;
       }
-      #menu-button {
-        margin-top: 2rem;
-        height: 30px;
-        cursor: pointer;
-        position: relative;
-        width: 45px;
-        display: flex;
-        justify-content: end;
-        z-index: 1000;
-        border: inherit;
-        background-color: inherit;
-        @include media-breakpoint-up(md) {
-          display: none;
-        }
-      }
-      &-container {
-        @include media-breakpoint-down(md) {
-          display: none;
-        }
-        &-buttons-mobile {
-          display: flex;
-          flex-direction: column;
-          margin-top: 5rem;
-          margin-left: 1rem;
-          gap: 1rem;
-          .bg-white {
-            max-width: 200px;
-          }
-          a {
-            max-width: 200px;
-          }
-          &-text {
-            display: flex;
-            gap: 0.3rem;
-            color: white;
-            svg {
-              width: 2em;
-              height: 1.5em;
-            }
-          }
-          @include media-breakpoint-up(md) {
-            display: none;
-          }
-        }
-        .menu-menu-1-container {
-          height: 100%;
-          ul {
-            display: flex;
-            gap: 2rem;
-            justify-content: center;
-            height: 100%;
-            @include media-breakpoint-down(md) {
-              flex-direction: column;
-              text-align: center;
-              justify-content: start;
-            }
-            li {
-              a {
-                position: relative;
-                color: var(--color-blue-dark);
-                font-size: var(--font-size-base);
-                font-weight: 600;
-                font-size: var(--font-size-md);
-                &:before {
-                  content: "";
-                  position: absolute;
-                  transition: transform 0.5s ease;
-                }
-                &:after {
-                  content: "";
-                  position: absolute;
-                  transition: transform 0.5s ease;
-                }
-                > span {
-                  &:before {
-                    content: "";
-                    position: absolute;
-                    transition: transform 0.5s ease;
-                  }
-                  &:after {
-                    content: "";
-                    position: absolute;
-                    transition: transform 0.5s ease;
-                  }
-                }
-                padding-top: 10px;
-                &:before {
-                  left: 0;
-                  bottom: -5px;
-                  width: 100%;
-                  height: 2px;
-                  background: var(--color-blue);
-                  transform: scaleX(0);
-                }
-                &:hover {
-                  &:before {
-                    transform: scaleX(1);
-                  }
-                }
-                @include media-breakpoint-down(md) {
-                  color: white;
-                }
-              }
-            }
-          }
-        }
-      }
-      .open {
-        width: 100vw;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        position: absolute;
-        background-color: #383b45;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(2, 1fr);
-        z-index: 100;
-      }
-    }
-    &-account {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 100%;
-      &-container {
-        text-align: end;
-        display: flex;
-        gap: 0.3rem;
-        color: white;
-        justify-content: center;
-        span {
-          color: #000;
-          @include media-breakpoint-down(md) {
-            color: white;
-          }
-        }
-        svg {
-          width: 2em;
-          height: 1.5em;
-        }
-      }
-      @include media-breakpoint-down(md) {
-        display: none;
-      }
-      &-buttons {
-        display: flex;
-        gap: 0.5rem;
-        a {
-          font-size: 16px !important;
-          justify-content: center;
-        }
-      }
-    }
-    .logout {
-      transition: 0.3s ease-in-out;
-      &:hover {
-        margin-left: 1rem;
-      }
-    }
-    .myaccount {
-      transition: 0.3s ease-in-out;
-      &:hover {
-        margin-left: 1rem;
-      }
     }
   }
+}
+
+.container-menu {
+  background-color: var(--color-dark);
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: var(--menu-width);
+  z-index: 100;
+  transform: translateX(-300px);
+  transition: transform 0.5s ease-in-out;
+  #menu-main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    background-color: var(--color-dark);
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    height: 100%;
+    padding-left: 5rem;
+    padding-top: 2rem;
+    width: 100%;
+  }
+}
+:root {
+  --menu-width: 300px; /* Ajuste la largeur du menu */
+}
+
+.container-menu.active {
+  transform: translateX(-300px);
+}
+body {
+  transform: translateX(0);
+  transition: transform 0.5s ease-in-out;
+}
+body.menu-open {
+  transform: translateX(var(--menu-width));
+  overflow: hidden; /* Empêche le défilement */
 }
