--- a/assets/src/scss/_templates/homepage.scss
+++ b/assets/src/scss/_templates/homepage.scss
@@ -2,7 +2,7 @@
 #homepage {
   //Section Landing
   .landing {
-    height: 90vh;
+    height: 100vh;
     width: 100vw;
     background-size: cover;
     background-position: center;
@@ -10,22 +10,23 @@
     background-attachment: fixed;
     position: relative;
     z-index: 1;
-    @include media-breakpoint-down(md) {
-      height: 100vh;
-    }
     &::after {
       content: "";
       position: absolute;
       top: 0;
       left: 0;
       width: 100vw;
-      height: 90vh;
+      height: 100vh;
       background-color: black;
       z-index: -1;
       opacity: 0.4;
-      @include media-breakpoint-down(md) {
-        height: 100vh;
-      }
+    }
+    .background-video {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      z-index: -1;
     }
     .custom-select {
       select {
