--- a/assets/src/scss/_components/index.scss
+++ b/assets/src/scss/_components/index.scss
@@ -6,6 +6,7 @@
 @import "modal";
 @import "splittext";
 @import "menu";
+@import "menu_user";
 @import "quill";
 @import "image_effect";
 @import "sweetAlert2";
