--- a/assets/src/scss/_templates/homepage.scss
+++ b/assets/src/scss/_templates/homepage.scss
@@ -60,130 +60,34 @@
         pointer-events: none;
       }
     }
-    .form {
-      button {
-        background-color: var(--color-blue);
-        color: white;
-        padding: 0.5rem 1rem;
-        border: 1px solid transparent;
-        border-radius: 15px;
-      }
-    }
   }
   //Section Reassurance
   .reassurance {
+    img {
+      max-width: 90px;
+    }
     .text-lg {
       @include media-breakpoint-down(md) {
         font-size: var(--font-size-base);
       }
     }
   }
-  //Section Slide Talents
-  .talent {
-    text-align: center;
-    max-height: 500px;
-    #talentCarousel {
-      padding: 0 1rem;
-      img {
-        max-width: 100%;
-      }
-      .talent-infos {
-        max-width: 100%;
-        position: relative;
-        overflow: hidden;
-
-        &:hover {
-          .talent-text {
-            bottom: -130px;
-          }
-          .cover {
-            transform: scale(1.2);
-          }
-        }
-        .cover {
-          transition: 0.3s ease-in-out;
-        }
-        .talent-text {
-          position: absolute;
-          bottom: -35px;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          color: white;
-          width: 100%;
-          transition: 0.3s ease-in-out;
-          &::before {
-            content: "";
-            position: absolute;
-            bottom: -10px;
-            left: 0;
-            background: #333;
-            width: 100%;
-            height: 90px;
-            z-index: -1;
-            opacity: 0.5;
-          }
-        }
-        &-title {
-          margin-top: 10px;
-          font-size: 16px;
-          font-weight: bold;
-          color: #fff;
-        }
-        &-professionnel {
-          margin-top: 5px;
-          font-size: 14px;
-          color: #ffba4a;
-        }
-        &-localisation {
-          margin-top: 5px;
-          font-size: 12px;
-          color: #f1f1f1;
-        }
-      }
+  //Section Contact
+  .contact {
+    .form-contact {
+      background-color: #f2f2f2;
+      color: var(--color-dark);
+      padding: 3rem 2rem;
+      border-radius: 10px;
     }
   }
-  //Section Search Recherche Talents
-  .searchtalent {
-    position: relative;
-    &-slogan {
-      @include media-breakpoint-up(lg) {
-        top: 110px;
-        left: 30%;
-        transform: translate(-50%, -50%);
-        position: absolute;
-        text-align: center;
-      }
-    }
-  }
-  //Section Find Talents
-  .findtalent {
-    position: relative;
-    &-title {
-      position: relative;
-      div {
-        width: 300px;
-      }
-      &::before {
-        content: "❝";
-        position: absolute;
-        left: 10px;
-        top: -10px;
-        color: var(--color-professionnel);
-        font-size: var(--font-size-xl);
-      }
-      &::after {
-        content: "❝";
-        position: absolute;
-        left: 160px;
-        bottom: -10px;
-        color: var(--color-professionnel);
-        font-size: var(--font-size-xl);
-        transform: rotate(180deg);
-      }
-    }
-    a {
-      border-radius: 50px;
-      padding: 1rem;
+  //Temoignage
+  .temoignage {
+    img {
+      border-radius: 50%;
+      height: 100px;
+      width: 100px;
+      object-fit: cover;
     }
   }
 }
