--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -9,6 +9,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gilda+Display&display=swap");
 
 body {
   font-family: var(--fontheading);
@@ -37,8 +38,41 @@ h5,
   line-height: 1.2;
 }
 
+.bold-400 {
+  font-weight: 400;
+}
+
+.bold-500 {
+  font-weight: 500;
+}
+
+.bold-100 {
+  font-weight: 100;
+}
+
+.font-GildaDisplay {
+  font-family: var(--fontGildaDisplay);
+}
+
+.hidden {
+  visibility: hidden;
+}
+
 .btn {
   cursor: pointer;
+}
+
+.p-fixed {
+  position: fixed;
+  top: 0rem;
+}
+
+.ratio-1x1 {
+  aspect-ratio: 1/1;
+}
+
+.ratio-4x3 {
+  aspect-ratio: 4/3;
 }
 
 .border-particulier {
