--- a/assets/src/scss/_components/index.scss
+++ b/assets/src/scss/_components/index.scss
@@ -10,3 +10,8 @@
 @import "quill";
 @import "image_effect";
 @import "sweetAlert2";
+@import "filter-projects";
+@import "pagination";
+@import "glightbox";
+@import "lenis";
+@import "comparison-table";
