--- a/assets/src/scss/_variables.scss
+++ b/assets/src/scss/_variables.scss
@@ -4,16 +4,18 @@ $colors: (
   "blue": #3968a8,
   "particulier": #3968a8,
   "blue-light": #01a0be,
-  "blue-dark": #383b45,
+  "blue-dark": #232739,
   "dark": #111111,
-  "pro-gold": #e5b704,
-  "pro-premium": #b21917,
+  "pro-gold": #bfa450,
+  "pro-premium": #aacff3,
   "professionnel": #fc8f02,
   "white": #ffffff,
   "grey": #f1f1f1f1,
   "gray": #b5b5b5,
-  "gren": #a9c80f,
-  "gray-dark": #757575 //grey-100: rgb(216, 216, 216),,,,,,,,,,,,,
+  "green": #57bd76,
+  "red": #d74a46,
+  "gray-dark": #757575
+    //grey-100: rgb(216, 216, 216),,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 );
 
 $sizes: (
