--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Vite WordPress starter theme
-Theme URI: https://github.com/oguilleux/vite-wordpress-starter-theme
-Author: Olivier Guilleux
-Author URI: https://www.olivier-guilleux.com
-Description: Theme for an awesome team !
+Theme Name: Showroom Archiecte Thème
+Theme URI: 
+Author: La Nation du web
+Author URI: https://www.lanationduweb.fr/
+Description: Theme pour Showroom Architecte
 Version: 1.0.0
 Text Domain: textdomaintomodify
 */
