--- a/assets/src/scss/_components/_menu.scss
+++ b/assets/src/scss/_components/_menu.scss
@@ -12,11 +12,15 @@ $nav-tog-dur: 0.5s;
   display: block;
   cursor: pointer;
   position: fixed; //span has position: absolute
-  top: 15px;
+  top: 60px;
   left: 15px;
   z-index: 999999;
   transition: 0.5s ease-in-out;
   padding: 1rem;
+  @include media-breakpoint-down(md) {
+    top: 20px;
+    right: 20px;
+  }
   &.nav-on {
     left: 315px;
   }
