--- a/assets/src/scss/_components/_menu_user.scss
+++ b/assets/src/scss/_components/_menu_user.scss
@@ -9,8 +9,10 @@
 
 .navigation {
   position: fixed;
-  top: 20px;
-  right: 20px;
+  // top: 20px;
+  // right: 20px;
+  top: 60px;
+  right: 40px;
   width: 120px;
   height: 60px;
   display: flex;
@@ -21,6 +23,10 @@
   overflow: hidden;
   transition: height 0.5s, width 0.5s;
   transition-delay: 0s, 0.75s;
+  @include media-breakpoint-down(md) {
+    top: 20px;
+    right: 20px;
+  }
 }
 
 .navigation .user-box {
@@ -36,8 +42,15 @@
 
 .navigation .user-box .username {
   font-size: 1.2rem;
-  white-space: nowrap;
-  color: var(--gray);
+  white-space: normal;
+  word-break: break-word;
+  max-width: 100%;
+  display: inline-block;
+  line-height: 1;
+  margin-block-end: inherit;
+  @include media-breakpoint-down(md) {
+    font-size: 1rem;
+  }
 }
 
 .navigation .user-box .image-box {
@@ -97,6 +110,9 @@
   margin-top: 60px;
   padding: 20px;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
+  @include media-breakpoint-down(md) {
+    margin-top: 0;
+  }
 }
 
 .menu li {
@@ -132,9 +148,12 @@
 
 .navigation.active {
   width: 300px;
-  height: 350px;
+  height: 290px;
   transition: width 0.5s, height 0.5s;
   transition-delay: 0s, 0.75s;
+  @include media-breakpoint-down(md) {
+    width: 250px;
+  }
 }
 
 .navigation.active .user-box {
