--- a/assets/src/scss/_templates/connexion.scss
+++ b/assets/src/scss/_templates/connexion.scss
@@ -1,126 +1,12 @@
 .connexion-page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  @include media-breakpoint-up(md) {
-    height: 70vh;
-  }
-  .flex {
-    @include media-breakpoint-down(md) {
-      flex-wrap: wrap;
-      flex-direction: column;
-    }
-  }
-  h2 {
-    padding-top: 3rem;
-    text-align: center;
-    color: var(--color-white);
-
-    font-size: var(--font-size-xl);
-    text-transform: uppercase;
-  }
   .card {
-    flex: 1;
-    height: 500px;
-    h3 {
-      opacity: 0;
-      position: absolute;
-      z-index: 11;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      transition: all 0.3s ease-in-out;
-      width: 100%;
-    }
-  }
-  .card-connexion {
-    padding: 2rem;
-    margin: 2rem 0;
-    display: flex;
-    flex-direction: column;
-    background-color: var(--color-white);
-    max-width: 630px;
-    @include media-breakpoint-down(md) {
-      max-width: 100%;
-      width: 100%;
-    }
-    button {
-      width: max-content;
-    }
-  }
-  .card-inscription {
-    padding: 2rem;
-    margin: 2rem 0;
-    display: flex;
-    flex-direction: column;
-    max-width: 630px;
-    @include media-breakpoint-down(md) {
-      max-width: 100%;
-      width: 100%;
-    }
+    border: 1px solid #eee;
+    box-shadow: 0 0 0px rgba(33, 33, 33, 0.2);
+    border-radius: 10px;
+    transition: 0.3s ease-in-out;
   }
 }
 
-.pro-inscription {
-  position: relative;
-  overflow: hidden;
-  background-color: var(--color-professionnel);
-}
-.particulier-inscription {
-  position: relative;
-  overflow: hidden;
-  background-color: var(--color-blue);
-}
-.particulier-connexion {
-  position: relative;
-  overflow: hidden;
-  input {
-    &:hover,
-    &:focus,
-    &:active:focus {
-      color: var(--color-blue);
-      border-bottom: 1px solid var(--color-blue);
-      &::placeholder {
-        color: var(--color-blue);
-      }
-    }
-  }
-  button {
-    width: max-content;
-    background-color: var(--color-blue);
-  }
-}
-.pro-connexion {
-  position: relative;
-  overflow: hidden;
-  input {
-    &:hover,
-    &:focus,
-    &:active:focus {
-      color: var(--color-professionnel);
-      border-bottom: 1px solid var(--color-professionnel);
-      &::placeholder {
-        color: var(--color-professionnel);
-      }
-    }
-  }
-  button {
-    width: max-content;
-    background-color: var(--color-professionnel);
-  }
-}
-
-.reg,
-.log {
-  transform: translate(0, 0) scale(0);
-  width: 0px;
-  height: 0px;
-  transition: all 0.3s ease-in-out;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 10;
-}
 form {
   margin-top: 3rem;
   input {
@@ -149,10 +35,44 @@ form {
   .custom-input {
     position: relative;
     z-index: 1;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
     padding-left: 20px;
     color: #858585;
     -webkit-transition: 0.5s;
     transition: 0.5s;
+  }
+  input[type="checkbox"],
+  input[type="radio"] {
+    margin: 0;
+    border: 1px solid var(--color-dark);
+    border-radius: 0;
+  }
+  select {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 1.225rem;
+    border-radius: 0.375rem !important;
+    color: #858585;
+  }
+  input[type="checkbox"]:checked,
+  input[type="radio"]:checked {
+    background-color: var(--color-dark);
+    border-color: var(--color-dark);
+  }
+  label {
+    margin: 0;
+  }
+}
+
+.card-inscription {
+  .suggestion {
+    position: absolute;
+    background-color: white;
+    top: 70px;
+    left: 12px;
+    z-index: 100;
+    padding: 1rem;
+    width: 277px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 1);
+    border-radius: 5px;
   }
 }
