--- a/assets/src/scss/_templates/dashboard.scss
+++ b/assets/src/scss/_templates/dashboard.scss
@@ -72,7 +72,8 @@
   }
 }
 #pro-info-form {
-  input[type="checkbox"] {
+  input[type="checkbox"],
+  input[type="radio"] {
     border: 1px solid #000;
   }
 }
