--- a/assets/src/scss/_templates/footer.scss
+++ b/assets/src/scss/_templates/footer.scss
@@ -9,6 +9,9 @@ footer {
       border-top: 1px solid rgba(0, 0, 0, 0.1);
       display: flex;
       gap: 1rem;
+      @include media-breakpoint-down(md) {
+        flex-direction: column;
+      }
       a {
         color: var(--color-white);
         opacity: 0.7;
