--- a/assets/src/scss/main.scss
+++ b/assets/src/scss/main.scss
@@ -65,6 +65,7 @@ h5,
 .p-fixed {
   position: fixed;
   top: 0rem;
+  z-index: 100;
 }
 
 .ratio-1x1 {
@@ -88,7 +89,7 @@ h5,
   border: 4px solid var(--color-pro-gold);
 }
 .border-bottom {
-  padding-bottom: 1rem;
+  margin-bottom: 1rem;
   border-bottom: 1px solid #e6e7ec;
 }
 .border-right {
@@ -242,6 +243,10 @@ main {
   border-radius: 10px;
 }
 
+.w-100 {
+  width: 100%;
+}
+
 form {
   label:not(.form-check-label) {
     font-family: var(--fontheading);
@@ -314,4 +319,76 @@ form {
       color: var(--color-dark);
     }
   }
+}
+
+.input-select {
+  /* Reset. */
+  border: unset;
+
+  /* Style */
+  width: 100%;
+  max-width: 400px;
+  padding: 0.4rem;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+
+  /* Arrow */
+  appearance: none;
+  background-image: url("data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23131313%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E");
+  background-repeat: no-repeat;
+  background-position: right 0.7rem top 50%;
+  background-size: 0.65rem auto;
+}
+
+.rounded-bottom-left {
+  border-bottom-left-radius: 10px;
+}
+.rounded-top-left {
+  border-top-left-radius: 10px;
+}
+
+.scale {
+  transform: scale(0.95);
+}
+
+.text-on-image {
+  font-size: 12px;
+  text-align: center;
+  position: absolute;
+  background-color: #333;
+  color: #fff;
+  width: 92%;
+  bottom: 7px;
+  border-radius: 5px;
+  padding: 1rem;
+  font-weight: bold;
+}
+
+.project-modal-container ion-icon {
+  vertical-align: middle;
+  margin-right: 6px;
+  font-size: 18px;
+  color: #555;
+}
+
+.project-modal-container p {
+  margin: 4px 0;
+}
+
+.project-details strong {
+  display: block;
+  margin-bottom: 4px;
+  font-weight: 600;
+  color: #333;
+}
+
+.cursor {
+  cursor: pointer;
+}
+
+.is-anim {
+  opacity: 0;
+}
+
+.mobile {
+  display: none;
 }
